# RedEye

./: CMakeLists.txt  Main.qml  RobotManager.h  diff.txt  main.cpp  proto_listener.cpp  proto_listener.h  readme.md  resources.qrc  robot.cpp  robot.h
communication/protobuf/: ssl_UI.pb.cc  ssl_UI.pb.h  ssl_UI.proto  ssl_eletro_UI.pb.cc  ssl_eletro_UI.pb.h  ssl_eletro_UI.proto  ssl_eletro_UI_pb2.py  ssl_vision_detection.pb.cc  ssl_vision_detection.pb.h  ssl_vision_geometry.pb.cc  ssl_vision_geometry.pb.h  ssl_vision_wrapper.pb.cc
qml/: App.qml  DemoButton.ui.qml  FieldMap.qml  FontManager.qml  GalleryMenuButton.ui.qml  RedRef.ui.qml  Robo_view.qml  RobotStatusDelegate.qml
utils/: utils.js
